--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ background: url('panart.png');
 </article>
   <article role="tabpanel" hidden id="tab-C" style="height:300px;">
     <h3>Phone photos</h3>
-    <p>These are mostly photos that I took without remembering it.</p>
+    <p>These are mostly photos that I took with short exposure and movement.</p>
 	<div class="flexbox">
 	<div class="photos"><img src="photos/IMG_20180523_080131.jpg"></div>
 	<div class="photos"><img src="photos/photo_2021-09-15_21-42-24.jpg"></div>
