--- a/index.html
+++ b/index.html
@@ -47,23 +47,9 @@ background: url('panart.png');
 	</div>
   </article>
   <article role="tabpanel" hidden id="tab-D">
-  <h3>More...</h3>
-    <p>This tab contains a GroupBox</p>
-    <fieldset>
-      <legend>Today's mood</legend>
-      <div class="field-row">
-        <label for="radio10">Claire Saffitz</label>
-      </div>
-      <div class="field-row">
-        <label for="radio11">Brad Leone</label>
-      </div>
-      <div class="field-row">
-        <label for="radio12">Chris Morocco</label>
-      </div>
-      <div class="field-row">
-        <label for="radio13">Carla Lalli Music</label>
-      </div>
-    </fieldset>
+<div class="flexbox">
+	<div class="videos"><a href="art/nicotine.png"><img src="art/nicotine.png"><h2>Camp trip #2</h2></a></div><div class="videos"><a href="art/camp.png"><img src="art/camp.png"><h2>Camp trip #1</h2></a></div>
+	</div>
   </article>
   <article role="tabpanel" hidden id="tab-E"  style="width:700px;height:400px;margin-left:405px;">
     <h3>Tab 3</h3>
