--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ background: url('panart.png');
   </article>
   <article role="tabpanel" hidden id="tab-D">
 <div class="flexbox">
-	<div class="videos"><a href="art/nicotine.png"><img src="art/nicotine.png"><h2>Camp trip #2</h2></a></div><div class="videos"><a href="art/camp.png"><img src="art/camp.png"><h2>Camp trip #1</h2></a></div>
+	<div class="videos"><a href="art/nicotine.png"><img width="300px" src="art/nicotine.png"><h2>Camp trip #2</h2></a></div><div class="videos"><a href="art/camp.png"><img width="300px" src="art/camp.png"><h2>Camp trip #1</h2></a></div>
 	</div>
   </article>
   <article role="tabpanel" hidden id="tab-E"  style="width:700px;height:400px;margin-left:405px;">
