--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@ background: url('panart.png');
 <button  role="tab"						 aria-controls="tab-B">videos</button>
 <button  role="tab"						 aria-controls="tab-C">photography</button>
 <button  role="tab"						 aria-controls="tab-D">art</button>
-<button  role="tab"						 aria-controls="tab-E">contact</button>
+<button  role="tab"						 aria-controls="tab-E">archytecture</button>
+<button  role="tab"						 aria-controls="tab-F">contact</button>
   </menu>
   <!-- the tab content -->
   <article role="tabpanel" id="tab-A">
@@ -51,9 +52,19 @@ background: url('panart.png');
 	<div class="videos"><a href="art/melatonin.png"><img width="300px" src="art/menaltonin.png"><h2>Melatonin dreams</h2></a></div><div class="videos"><a href="art/nicotine.png"><img width="300px" src="art/nicotine.png"><h2>Camp trip #2</h2></a></div><div class="videos"><a href="art/camp.png"><img width="300px" src="art/camp.png"><h2>Camp trip #1</h2></a></div>
 	</div>
   </article>
-  <article role="tabpanel" hidden id="tab-E"  style="width:700px;height:400px;margin-left:405px;">
-    <h3>Tab 3</h3>
-    <p>Lorem Ipsum Dolor Sit</p>
+  <article role="tabpanel" hidden id="tab-E">
+<div class="flexbox">
+	<h3>Projects I am working on in the Hammer++ editor</h3>
+	<div class="videos">
+		<a href="hammer/gm_mall1.png"><img width="300px" src="hammer/gm_mall1.png">
+			<h2>Liminal mall</h2></a></div>
+	<div class="videos"><a href="hammer/gm_ballroom.png"><img width="300px" src="hammer/gm_ballroom.png">
+		<h2>Terror Hotel</h2></a></div>
+	</div>
+  </article>
+  <article role="tabpanel" hidden id="tab-F"  style="width:700px;height:400px;margin-left:405px;">
+    <h3>Find me</h3>
+    <p>Soon</p>
   </article>
 </section>
 <script src="js/script.js" ></script>
