--- a/index.html
+++ b/index.html
@@ -56,9 +56,9 @@ background: url('panart.png');
 <div class="flexbox">
 	<h3>Projects I am working on in the Hammer++ editor</h3>
 	<div class="videos">
-		<a href="hammer/gm_mall1.png"><img width="300px" src="hammer/gm_mall1.png">
+		<a href="hammer/gm_mall1.PNG"><img width="300px" src="hammer/gm_mall1.PNG">
 			<h2>Liminal mall</h2></a></div>
-	<div class="videos"><a href="hammer/gm_ballroom.png"><img width="300px" src="hammer/gm_ballroom.png">
+	<div class="videos"><a href="hammer/gm_ballroom.PNG"><img width="300px" src="hammer/gm_ballroom.PNG">
 		<h2>Terror Hotel</h2></a></div>
 	</div>
   </article>
